[tool.poetry]
name = "aizawa"
version = "2.0.0"
description = "The Ninja's Choice for Web Operations"
authors = ["elliottophellia"]
packages = [{include = "aizawa"}]

[tool.poetry.dependencies]
python = "^3.13"
httpx = "^0.25.0"
validators = "^0.22.0"

[tool.poetry.scripts]
aizawa = "aizawa.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
